# 102-cpp-protobuf-template-master

./: CMakeLists.txt  README.md  run
102-cpp-protobuf-template-master/: CMakeLists.txt  run
102-cpp-protobuf-template-master/102-cpp-protobuf-template-master/: CMakeLists.txt
102-cpp-protobuf-template-master/102-cpp-protobuf-template-master/src/protobuf/: CMakeLists.txt
102-cpp-protobuf-template-master/102-cpp-protobuf-template-master/test/: CMakeLists.txt  Test_DelimitedMessagesStreamParser.cpp  Test_Helpers.cpp
102-cpp-protobuf-template-master/Project/: '  CMakeLists.txt  del  file.proto  main.cpp  run  serialize.h
102-cpp-protobuf-template-master/Project/parser/: parser.h
102-cpp-protobuf-template-master/src/protobuf/: CMakeLists.txt  message.pb.cc  message.pb.h
102-cpp-protobuf-template-master/src/protobuf_parser/: DelimitedMessagesStreamParser.hpp  helpers.hpp
102-cpp-protobuf-template-master/test/: CMakeLists.txt  Test_DelimitedMessagesStreamParser.cpp  Test_Helpers.cpp
src/protobuf/: CMakeLists.txt
src/protobuf_parser/: DelimitedMessagesStreamParser.hpp
test/: CMakeLists.txt  Test_DelimitedMessagesStreamParser.cpp  Test_Helpers.cpp
